# elder_robot

./: CMakeLists.txt  README.md  package.xml
config/: mapper_params_online_async.yaml  slam_config.rviz
launch/: elder_robot.launch.py  launchfile.launch.py
urdf/: elderbot.urdf  elderbot.urdf.xacro  inertial_macros.xacro  materials.xacro  robotcore.xacro  sensors.xacro
worlds/: sim_
