<?xml version="1.0"?>
<package format="3">
  <name>elder_robot</name>
  <version>0.0.1</version>
  <description>Elderly Care Robot for ROS2 Dashing Gazebo sim</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
